--- a/_posts/2021-03-31-6hbg.md
+++ b/_posts/2021-03-31-6hbg.md
@@ -1,9 +1,9 @@
 --- 
-title: برگزاری میزگرد مجازی: «میراث سرقت: گفتگویی در باب موزه‌ها و اعادۀ فرهنگی» 
+title: "برگزاری میزگرد مجازی: «میراث سرقت: گفتگویی در باب موزه‌ها و اعادۀ فرهنگی»" 
 authors: asmaneh 
 types: "news" 
 categories: "null" 
-featureImg: "https://raw.githubusercontent.com/asmaneh/asmaneh.github.io/master/assets/img/posts/6hbg.jpg" 
+featureImg: "/assets/img/posts/6hbg.jpg" 
 slug: "6hbg" 
 --- 
 -  اعضای میزگرد: کندیس هاپکینز، دن هیکس، جولی کروکس
