--- a/_posts/2021-03-31-6hbg.md
+++ b/_posts/2021-03-31-6hbg.md
@@ -5,6 +5,10 @@ types: "news"
 categories: "null" 
 featureImg: "/assets/img/posts/6hbg.jpg" 
 slug: "6hbg" 
+gallery: 
+- image_path: "/assets/img/posts/6hbg.jpg" 
+  title: "برگزاری میزگرد مجازی: «میراث سرقت: گفتگویی در باب موزه‌ها و اعادۀ فرهنگی»" 
+ 
 --- 
 -  اعضای میزگرد: کندیس هاپکینز، دن هیکس، جولی کروکس
 - میزبان: مرکز هنری کافلر
