--- a/_posts/2017-08-16-dX29.md
+++ b/_posts/2017-08-16-dX29.md
@@ -3,5 +3,6 @@ title: "مفهوم تاریخ و مورخ در تفکر ایرانی"
 authors: mrahimzadeh 
 types: "voices" 
 slug: "dX29" 
-<div id="71180217751"><script type="text/JavaScript" src="https://www.aparat.com/embed/yYCmH?data[rnddiv]=71180217751&data[responsive]=yes"></script></div>--- 
+embedCode: '<div id="71180217751"><script type="text/JavaScript" src="https://www.aparat.com/embed/yYCmH?data[rnddiv]=71180217751&data[responsive]=yes"></script></div>'
+--- 
 تهران، دانشگاه شهید بهشتی، ۱۳۹۱.
