add embeded posts

--- a/_posts/2021-03-31-qkBw.md
+++ b/_posts/2021-03-31-qkBw.md
@@ -1,11 +1,10 @@
---- 
-title: "برگزاری سخنرانی مجازی: «ترسیم مسجدِ منفرد»" 
-authors: asmaneh 
-types: "news" 
-slug: "qkBw" 
-gallery: 
- 
---- 
+---
+title: "برگزاری سخنرانی مجازی: «ترسیم مسجدِ منفرد»"
+authors: asmaneh
+types: "news"
+slug: "qkBw"
+embedCode: '<div id="71180217751"><script type="text/JavaScript" src="https://www.aparat.com/embed/yYCmH?data[rnddiv]=71180217751&data[responsive]=yes"></script></div>'
+---
 - سخنران: زیاد جمال‌الدین
 - برگزارکننده: دپارتمان تاریخ هنر و باستان‌شناسی، مؤسسۀ مطالعات خاورمیانه، دانشگاه کلمبیا؛ در چارچوب مجموعه سمینارهای «گسستن وحدت و تأمل در پاره‌ها: نظری دوباره به معماری سرزمین‌های اسلامی»
 - زمان: ۶ آوریل ۲۰۲۱| ۱۷ فروردین ۱۴۰۰
