--- a/_posts/2019-12-25-JNTH.md
+++ b/_posts/2019-12-25-JNTH.md
@@ -3,7 +3,12 @@ title: "۱ - مقدمه: چرا  شهر «جمهوری اسلامی ایران»
 authors: فرزاد زره‌داران 
 types: "bulletins" 
 categories: "ircity" 
+featureImg: "/assets/img/posts/JNTH.jpg" 
 slug: "JNTH" 
+gallery: 
+- image_path: "/assets/img/posts/JNTH.jpg" 
+  title: "۱ - مقدمه: چرا  شهر «جمهوری اسلامی ایران»؟" 
+ 
 --- 
 در زمستان سال نودوهفت، طرحی در وزارت مسکن و شهرسازی به تصویب رسید که بنا بر آن مقرر شد ۴۰۰هزار واحد مسکونی در شهر‌های جدید و بافت‌های فرسوده ساخته شود. این طرح «طرح اقدام ملی مسکن» نام گرفت. هدف این طرح آن است که با مساعدت دولت افرادی را که طی چهارده سال گذشته زمین یا خانه برای خود نداشته‌اند صاحب‌خانه کند. اکنون مراحل شناسایی افراد ذی‌صلاح برای استفاده از تسهیلات این طرح رو به پایان است و سیاست‌گذاری‌های کلان برای پیشبرد این پروژه آغازشده است. در پنجم شهریورماه سال نودوهشت، مراسمی برای آغاز عملیات اجرایی طرح اقدام ملی برگزار شد. رئیس‌جمهور در این مراسم سخنرانی کرد و از جامعه‌ي متخصص خواست که برای شهری به نام «شهر جمهوری اسلامی» تلاش کنند.
 
