--- a/_posts/2019-12-25-PxrW.md
+++ b/_posts/2019-12-25-PxrW.md
@@ -3,7 +3,12 @@ title: "۲ - جستار: از همین خاک  جهان دگری  ساختن"
 authors: مهرنوش دلشاد 
 types: "bulletins" 
 categories: "ircity" 
+featureImg: "/assets/img/posts/PxrW.jpg" 
 slug: "PxrW" 
+gallery: 
+- image_path: "/assets/img/posts/PxrW.jpg" 
+  title: "۲ - جستار: از همین خاک  جهان دگری  ساختن" 
+ 
 --- 
 مقصد زنده‌­دلان خواب پریشانی نیست          
 
