--- a/_posts/2019-12-25-VEVf.md
+++ b/_posts/2019-12-25-VEVf.md
@@ -1,5 +1,5 @@
 --- 
-title: "پست اینستاگرام| آیا این شهر زیبا می‌شود؟ | آشفته‌ایم" 
+title: "۱۰ - پست اینستاگرام | آیا این شهر زیبا می‌شود؟ | آشفته‌ایم" 
 authors: احسان اشراق و ساناز لری­ امینی 
 types: "bulletins" 
 categories: "ircity" 
@@ -7,7 +7,7 @@ featureImg: "/assets/img/posts/VEVf.jpg"
 slug: "VEVf" 
 gallery: 
 - image_path: "/assets/img/posts/VEVf.jpg" 
-  title: "پست اینستاگرام| آیا این شهر زیبا می‌شود؟ | آشفته‌ایم" 
+  title: "۱۰ - پست اینستاگرام | آیا این شهر زیبا می‌شود؟ | آشفته‌ایم" 
 - image_path: "/assets/img/posts/VEVf-1.jpg" 
   title: "آشفته‌ایم" 
  
