--- a/_posts/2019-12-25-PxrW.md
+++ b/_posts/2019-12-25-PxrW.md
@@ -1,5 +1,5 @@
 --- 
-title: "۲ - جستار: از همین خاک  جهان دگری  ساختن" 
+title: "جستار: از همین خاک  جهان دگری  ساختن" 
 authors: مهرنوش دلشاد 
 types: "bulletins" 
 categories: "ircity" 
@@ -7,7 +7,7 @@ featureImg: "/assets/img/posts/PxrW.jpg"
 slug: "PxrW" 
 gallery: 
 - image_path: "/assets/img/posts/PxrW.jpg" 
-  title: "۲ - جستار: از همین خاک  جهان دگری  ساختن" 
+  title: "جستار: از همین خاک  جهان دگری  ساختن" 
  
 --- 
 مقصد زنده‌­دلان خواب پریشانی نیست          
