--- a/_posts/2019-12-25-hitc.md
+++ b/_posts/2019-12-25-hitc.md
@@ -1,5 +1,5 @@
 --- 
-title: "۰ - دربارۀ پروندۀ «شهر جمهوری اسلامی ایران»" 
+title: "دربارۀ پروندۀ «شهر جمهوری اسلامی ایران»" 
 authors: smohseni 
 types: "bulletins" 
 categories: "ircity" 
