--- a/_posts/2019-12-25-pSFV.md
+++ b/_posts/2019-12-25-pSFV.md
@@ -1,9 +1,14 @@
 --- 
-title: "۳ - جستار: چند پرسش درباره‌ی یک پیشنهاد" 
+title: "جستار: چند پرسش درباره‌ی یک پیشنهاد" 
 authors: محمد علیزاده 
 types: "bulletins" 
 categories: "ircity" 
+featureImg: "/assets/img/posts/pSFV.jpg" 
 slug: "pSFV" 
+gallery: 
+- image_path: "/assets/img/posts/pSFV.jpg" 
+  title: "جستار: چند پرسش درباره‌ی یک پیشنهاد" 
+ 
 --- 
 رئیس ‌جمهور در سخنانی پیشنهاد ساختن شهری با نام جمهوری اسلامی ایران را مطرح می‌کند و در توضیح منظور خود اصفهان را شهری یا جایی می‌نامد که با آوردن نام صفویه به ذهن می‌آید و در مقابل یادآور می‌شود در دوران کنونی جایی وجود ندارد که با بردن نام جمهوری اسلامی به ذهن خطور کند. از توضیحات رئیس ‌جمهور اینطور برداشت می‌شود که به دنبال ساختن شهری است که از نظر کالبدی دارای ویژگی‌هایی مشخص و متمایز از دیگر دوره‌های تاریخی-سیاسی باشد و به ‌صورت نماد و نمونه‌ای مطلوب از معماری دوران حاکمیت جمهوری اسلامی باقی بماند. نام بردن از معماری صفویه و قاجاریه نیز نشان می‌دهد منظور او نه شهری آرمانی و دست‌نیافتنی که ساختن کالبدی مشخص و متمایز و البته ماندگار است تا در کنار نمونه‌هایی که ذکر می‌کند معرف معماری جمهوری اسلامی ایران باشد.
 
