--- a/_posts/2019-12-25-pgxV.md
+++ b/_posts/2019-12-25-pgxV.md
@@ -1,5 +1,5 @@
 --- 
-title: "۴ - جستار: پیش از  کالبد" 
+title: "جستار: پیش از  کالبد" 
 authors: پارسا طی 
 types: "bulletins" 
 categories: "ircity" 
