--- a/_posts/2019-12-25-dWCy.md
+++ b/_posts/2019-12-25-dWCy.md
@@ -1,5 +1,5 @@
 --- 
-title: "۵ - طرح مقاله: چگونه می‌توان به آرمان‌شهر دست یافت؟" 
+title: "طرح مقاله: چگونه می‌توان به آرمان‌شهر دست یافت؟" 
 authors: مهدیار امانی 
 types: "bulletins" 
 categories: "ircity" 
