--- a/_posts/2019-12-25-zagv.md
+++ b/_posts/2019-12-25-zagv.md
@@ -1,5 +1,5 @@
 --- 
-title: "۶ - جستار روایی: تمام شهرهایی که نساخته‌ایم" 
+title: "جستار روایی: تمام شهرهایی که نساخته‌ایم" 
 authors: محمدجواد زرین 
 types: "bulletins" 
 categories: "ircity" 
@@ -7,7 +7,7 @@ featureImg: "/assets/img/posts/zagv.jpg"
 slug: "zagv" 
 gallery: 
 - image_path: "/assets/img/posts/zagv.jpg" 
-  title: "۶ - جستار روایی: تمام شهرهایی که نساخته‌ایم" 
+  title: "جستار روایی: تمام شهرهایی که نساخته‌ایم" 
  
 --- 
 آنطور که نقل کرده‌اند مشتاق علیشاه، عارف نامی، پیش از سنگسارش به دست مردم گفته است: «چشمانم را ببندید که من از چشمان این مردم می‌ترسم». ترس از چشمان مردم شهر، همه‌ی مردم شهر، چیزی نیست که بتوان عمری با آن سر کرد. مسئله اینجاست که چرا در حفظ حرمت خاک باید شکایت را تا لحظه مرگ در دل نگه داشت و غریبگی شهر را به شکایت فریاد نزد؛ حتی وقتی اهالی همان خاک پیشقدمان احتمالی جنایتند. آنهایی که به هر طریق حرفشان را گفته‌اند به کنار، بسیاری دیگر که در فهم و وصف منشاء سازش‌ناپذیری با جهانشان نه از حواس شعرا بهره برده‌اند و نه صراحت عرفا. ناسازگاری افراد با شهرشان را چه کسی اندازه می‌گیرد؟ غلظت ترس و خشم و نا امیدی. این وجود مبهم احساس تلخ ناخرسندی از آن چیزهایی به نظر نمی‌رسد که تا ابد در گوشه‌ای از دل یکایک مردم مسکوت و سر به مهر بماند.
