--- a/_posts/2019-12-25-kRTD.md
+++ b/_posts/2019-12-25-kRTD.md
@@ -1,5 +1,5 @@
 --- 
-title: "۷ - جستار: معماری شهرهای بی‌هویت ما" 
+title: "جستار: معماری شهرهای بی‌هویت ما" 
 authors: منیژه خادمی 
 types: "bulletins" 
 categories: "ircity" 
@@ -7,7 +7,7 @@ featureImg: "/assets/img/posts/kRTD.jpg"
 slug: "kRTD" 
 gallery: 
 - image_path: "/assets/img/posts/kRTD.jpg" 
-  title: "۷ - جستار: معماری شهرهای بی‌هویت ما" 
+  title: "جستار: معماری شهرهای بی‌هویت ما" 
  
 --- 
 در این سخنرانی، روحانی به راهی برای ماندگار شدن معماری ایران به‌ مثابه‌ی نماد و تابلویی برای جهانیان اشاره می‌کند و آن را معماری جمهوری اسلامی ایران می‌نامد. او می‌گوید همان‌طور که معماری دوره‌ی صفویه یا قاجاریه داریم باید معماری دوره‌ی جمهوری اسلامی ایران هم داشته باشیم؛ اما نکته‌ی قابل ‌تأمل این است که آیا در دوره‌ای مانند صفویه صرفاً سعی کرده‌اند کار خودشان را به ‌خوبی انجام دهند یا به ماندگار شدن معماری‌شان به ‌مثابه‌ی نماد یا تابلویی برای آیندگان فکر می‌کرده‌اند؟ از سویی دیگر او طوری از معماری دوره‌ی صفویه و قاجاریه یاد می‌کند که گویی هر دوره‌ای معماری دوره‌ی قبل از خودش را کلاً انکار یا نابود کرده است؛ در حالی ‌که در بررسی تاریخ معماری به این نکته پی می‌بریم که معماری هر دوره‌ای در بسیاری موارد ادامه‌ی معماری دوره‌ی قبل از خودش بوده است. شاید جای این نکته در این بحث خالی است که با انقطاع از گذشته و همچنین جهان کنونی نمی‌توانیم موفق شویم.
