--- a/_posts/2019-12-25-GXy2.md
+++ b/_posts/2019-12-25-GXy2.md
@@ -1,5 +1,5 @@
 --- 
-title: "۸ - جستار: خودشیفتگی  در آیینه‌­ی  شهر آرمانی" 
+title: "جستار: خودشیفتگی  در آیینه‌­ی  شهر آرمانی" 
 authors: سارا بمانیان 
 types: "bulletins" 
 categories: "ircity" 
