--- a/_posts/2019-12-25-JBYR.md
+++ b/_posts/2019-12-25-JBYR.md
@@ -1,5 +1,5 @@
 --- 
-title: "9 - جستار: اقدام ملی ناظر بر تحولات اقلیمی" 
+title: "جستار: اقدام ملی ناظر بر تحولات اقلیمی" 
 authors: حمیدرضا بابایی 
 types: "bulletins" 
 categories: "ircity" 
