--- a/_posts/2019-12-25-T2zH.md
+++ b/_posts/2019-12-25-T2zH.md
@@ -1,5 +1,5 @@
 --- 
-title: "۱۱ - خلاصه­ این­که: رشته توییت" 
+title: "خلاصه­ این­که: رشته توییت" 
 authors: مهرنوش دلشاد 
 types: "bulletins" 
 categories: "ircity" 
@@ -7,7 +7,7 @@ featureImg: "/assets/img/posts/T2zH.jpg"
 slug: "T2zH" 
 gallery: 
 - image_path: "/assets/img/posts/T2zH.jpg" 
-  title: "۱۱ - خلاصه­ این­که: رشته توییت" 
+  title: "خلاصه­ این­که: رشته توییت" 
 - image_path: "/assets/img/posts/T2zH-1.jpg" 
   title: "رشتو ۲" 
 - image_path: "/assets/img/posts/T2zH-2.jpg" 
