--- a/_posts/2019-12-25-PxrW.md
+++ b/_posts/2019-12-25-PxrW.md
@@ -3,6 +3,7 @@ title: "جستار: از همین خاک  جهان دگری  ساختن"
 authors: مهرنوش دلشاد 
 types: "bulletins" 
 categories: "ircity" 
+sort: 3 
 featureImg: "/assets/img/posts/PxrW.jpg" 
 slug: "PxrW" 
 gallery: 
