--- a/_posts/2019-12-25-JNTH.md
+++ b/_posts/2019-12-25-JNTH.md
@@ -3,6 +3,7 @@ title: "مقدمه: چرا  شهر «جمهوری اسلامی ایران»؟"
 authors: فرزاد زره‌داران 
 types: "bulletins" 
 categories: "ircity" 
+sort: 2 
 featureImg: "/assets/img/posts/JNTH.jpg" 
 slug: "JNTH" 
 gallery: 
