--- a/_posts/2019-12-25-pSFV.md
+++ b/_posts/2019-12-25-pSFV.md
@@ -3,6 +3,7 @@ title: "جستار: چند پرسش درباره‌ی یک پیشنهاد"
 authors: محمد علیزاده 
 types: "bulletins" 
 categories: "ircity" 
+sort: 4 
 featureImg: "/assets/img/posts/pSFV.jpg" 
 slug: "pSFV" 
 gallery: 
