--- a/_posts/2019-12-25-pgxV.md
+++ b/_posts/2019-12-25-pgxV.md
@@ -3,6 +3,7 @@ title: "جستار: پیش از  کالبد"
 authors: پارسا طی 
 types: "bulletins" 
 categories: "ircity" 
+sort: 5 
 slug: "pgxV" 
 --- 
 جمهوری اسلامی ایران در طول حدوداً ۴۰ سال سعی داشته است بر جنبه‌های مختلف آرمانشهر خود جامه‌ی عمل بپوشاند. این جنبش پا‌ی خود را فراتر گذاشته و سعی دارد برای آرمانشهر خود کالبدی در نظر بگیرد؛ اما پیش از این لازم است بازنگری­ای در صورت فعلی جامعه و محیط آن صورت گیرد. در جامعه‌ی امروز ما با قشر‌هایی مواجه می‌شویم که در ایدئولوژی ۵۷ و کالبد آرمانشهر جایی نخواهند داشت. این قشر از جامعه را عاملی خارجی شکل نداده و از جایی دیگر به اینجا وصله نشده است؛ بلکه در همین بستر وجود یافته است. اگر بپذیریم که ظهور و وجود هر چیز بنا بر علت و نیاز شکل می‌گیرد، آنگاه حضور این قشر‌های اجتماعی ناشی از نیازی است که با تعریف‌های مذهبی و اجتماعی پنجاه‌و‌هفتی‌ها در مغایرت است.
