--- a/_posts/2019-12-25-kRTD.md
+++ b/_posts/2019-12-25-kRTD.md
@@ -3,6 +3,7 @@ title: "جستار: معماری شهرهای بی‌هویت ما"
 authors: منیژه خادمی 
 types: "bulletins" 
 categories: "ircity" 
+sort: 8 
 featureImg: "/assets/img/posts/kRTD.jpg" 
 slug: "kRTD" 
 gallery: 
