--- a/_posts/2019-12-25-T2zH.md
+++ b/_posts/2019-12-25-T2zH.md
@@ -3,6 +3,7 @@ title: "خلاصه­ این­که: رشته توییت"
 authors: مهرنوش دلشاد 
 types: "bulletins" 
 categories: "ircity" 
+sort: 12 
 featureImg: "/assets/img/posts/T2zH.jpg" 
 slug: "T2zH" 
 gallery: 
