--- a/_posts/2019-12-25-pSFV.md
+++ b/_posts/2019-12-25-pSFV.md
@@ -1,16 +1,16 @@
---- 
-title: "جستار: چند پرسش درباره‌ی یک پیشنهاد" 
-authors: محمد علیزاده 
-types: "bulletins" 
-categories: "ircity" 
-sort: 4 
-featureImg: "/assets/img/posts/pSFV.jpg" 
-slug: "pSFV" 
-gallery: 
-- image_path: "/assets/img/posts/pSFV.jpg" 
-  title: "جستار: چند پرسش درباره‌ی یک پیشنهاد" 
- 
---- 
+---
+title: "جستار: چند پرسش درباره‌ی یک پیشنهاد"
+authors: محمد علیزاده
+types: "bulletins"
+categories: "ircity"
+sort: 4
+attachedPDF: "/assets/img/posts/pSFV.jpg"
+featureImg: "/assets/img/posts/pSFV.jpg"
+slug: "pSFV"
+gallery:
+- image_path: "/assets/img/posts/pSFV.jpg"
+  title: "جستار: چند پرسش درباره‌ی یک پیشنهاد"
+---
 رئیس ‌جمهور در سخنانی پیشنهاد ساختن شهری با نام جمهوری اسلامی ایران را مطرح می‌کند و در توضیح منظور خود اصفهان را شهری یا جایی می‌نامد که با آوردن نام صفویه به ذهن می‌آید و در مقابل یادآور می‌شود در دوران کنونی جایی وجود ندارد که با بردن نام جمهوری اسلامی به ذهن خطور کند. از توضیحات رئیس ‌جمهور اینطور برداشت می‌شود که به دنبال ساختن شهری است که از نظر کالبدی دارای ویژگی‌هایی مشخص و متمایز از دیگر دوره‌های تاریخی-سیاسی باشد و به ‌صورت نماد و نمونه‌ای مطلوب از معماری دوران حاکمیت جمهوری اسلامی باقی بماند. نام بردن از معماری صفویه و قاجاریه نیز نشان می‌دهد منظور او نه شهری آرمانی و دست‌نیافتنی که ساختن کالبدی مشخص و متمایز و البته ماندگار است تا در کنار نمونه‌هایی که ذکر می‌کند معرف معماری جمهوری اسلامی ایران باشد.
 
 معماری در تمام دوران علاوه پاسخ دادن به نیازهای عملکردی، عرصه‌ی به جسمیت درآوردن شکوهِ قدرت، اندیشه، هنر، فرهنگ، و فنّ بانیان خود بوده است. نام بسیاری از شهرها و بناهای دوران‌ گذشته و حال به حکومت‌ها و فرهنگ‌های بانی آنها پیوند خورده است. همانطور که حکومت‌های کهن را با شهرها، کاخ‌ها، پرستشگاه‌ها و آرامگاه‌های باشکوهشان می‌شناسیم، در شهرهای جوامع امروزی نیز شاهد برخی بناهای عمومی هستیم که باهدف جسمیت بخشیدن به اندیشه، فرهنگ، و فنّ آن جامعه بنا می‌شود. به نظر می‌رسد رئیس ‌جمهور نیز با نگاهی مشابه به دنبال ساختن شهری است که برای مردمان حال و آینده نمونه‌ای از معماری و شهرسازی دوران حاکمیت جمهوری اسلامی باشد؛ زیرا که به نظر او نشانه‌ای از آن را در شهرهای کنونی کشور، حتی در حد نمونه‌ای قابل ‌مقایسه با آثار دوران صفویه و قاجاریه، نمی‌توان یافت. آنچه در میان سخنان رئیس ‌جمهور می‌توان متوجه شد گلایه‌ی او از معماری و شهرسازی در چهار دهه‌ی گذشته است که بروزش را  در سیمای آشفته و نابسامان تهران می‌توان دید؛ شهری که پایتخت جمهوری اسلامی ایران است اما احتمالاً نماینده‌ی شایسته‌ای برای این حکومت نیست و طبق پیشنهاد رئیس ‌جمهور باید با ساختن شهری نو تصویری مناسب از معماری جمهوری اسلامی به مردمان حال و آینده عرضه کنیم.
