--- a/_posts/2020-09-18-3.markdown
+++ b/_posts/2020-09-18-3.markdown
@@ -27,7 +27,7 @@ gallery:
 - image_path: /assets/img/posts/4-10.jpg
   title: "تصویر شمارۀ ۱۰- تراکم مسجدهای تاریخی ایران براساس تاریخِ آغاز‌به‌ساخت آن‌ها"
 ---
-![](/assets/img/posts/4-1.jpg){: .img-float-left}
+![تست](/assets/img/posts/4-1.jpg){: .img-float-left}
 
  شمار بناهای ثبت‌شده در فهرست بناهای تاریخی ایران به حدود سی‌ودوهزار پرونده رسیده است و هنوز بر این تعداد افزوده می‌شود. بااین‌حال شمار بناهای پژوهش‌شده از این فهرست، بسیار اندک است. تاریخِ معماری‌ای که با هفتصد هشتصد بنا نوشته شود، بی‌تردید با تاریخ معماری‌ای که چند هزار بنا و شاهد و متن تاریخی را پشتوانۀ خود داشته باشد، متفاوت خواهد بود. کم‌شماری تک‌نگاری‌های بناها و محوطۀ تاریخی ایران دلیل‌هایی متعدد دارد؛ چه‌بسا انحصار فهرست و نقشۀ این بناها و محوطه‌ها به سازمان میراث فرهنگی؛ نامهم‌انگاشتن اکثریت بناهای ثبت‌شده و تمرکز ناروا بر اندک بناهای شاخص؛ تمرکز ناروا بر گسترۀ جغرافیایی محدودی که عمدتاً نواحی مرکزی ایران است و مواردی این‌چنینی از دلیل‌های عمدۀ آن باشد. باری سهم «مسجد» در این میان چیزی در حدود ۱۲۷۷ بنا است (فهرست بناهای تاریخی سازمان میراث فرهنگی).[^1] اکثریت این رقم اخیر را کلیّت کالبد یک مسجد در بر می‌گیرد؛ هرچند در تعدادی از مسجدهای نوسازی‌شده هم صرفاً یک جزء یا یک فضا به ثبت رسیده است.[^2] ثبت آثار تاریخی از سال ۱۳۱۰ در «فهرست آثار غیرمنقول» آغاز شد و سازمان متولی ثبت آثار «اداره کل حفاظت آثار باستانی و بناهای تاریخی ایران» بود. ثبت مسجدها نیز از ۱۵دی‌ماه۱۳۱۰ آغاز شد و در همان روز، بیست‌ودو مسجد تاریخی به ثبت رسید که همگی از شاخص‌ترین مسجدهای تاریخ ایران هستند: مسجدجامع‌های اصفهان، شیراز، قزوین، تبریز، دامغان، ورامین، خرگرد، و سمنان از جملۀ مسجدهای ثبت‌شده در آن روز بودند (همان). متعاقب انقلاب سال ۱۳۵۷، نهاد متولی آثار تاریخی سازمان میراث فرهنگی شد: در سال ۱۳۶۴ و در جلسۀ مجلس شورای اسلامی، اساسنامۀ سازمان میراث فرهنگی تصویب و سازمان میراث فرهنگی با استناد به آن تشکیل شد و از همان ابتدا، یکی از وظایف آن «ثبت آثار ارزشمند منقول و غیرمنقول فرهنگی-تاریخی کشور در فهرست آثار ملّی و فهرست‌های ذی‌ربط» و «ایجاد مرکز اسناد و مدارک میراث فرهنگی کشور (نظیر مجموعه گزارش‌های علمی، نقشه‌ها و عکس‌های بناها و...) جهت ارائۀ خدمات علمی و تحقیقاتی در این زمینه» تعریف شد (اساسنامۀ سازمان میراث فرهنگی، ۱۳۶۴).
 
