--- a/_posts/2021-03-31-AbrM.md
+++ b/_posts/2021-03-31-AbrM.md
@@ -1,10 +1,11 @@
 --- 
 title: "کتاب تازه: «در باب تصور کنونی از تاریخ اجتماعی هنر»" 
 authors: asmaneh 
-types: "bap" 
-categories: "book" 
+types: bap 
+categories: book 
+tags: تست برچسب,برچسب 
 featureImg: "/assets/img/posts/AbrM.jpg" 
-slug: "AbrM" 
+slug: AbrM 
 gallery: 
 - image_path: "/assets/img/posts/AbrM.jpg" 
   title: "کتاب تازه: «در باب تصور کنونی از تاریخ اجتماعی هنر»" 
