--- a/_posts/2021-04-17-HGBb.md
+++ b/_posts/2021-04-17-HGBb.md
@@ -1,8 +1,7 @@
 --- 
 title: "نقدی بر خوانش و استفاده از منابع در شناخت (شهر) قزوین عصر صفوی" 
-authors: مهرزاد پرهیزکاری 
+authors: m.parhizkari 
 types: blog 
-categories: critique 
 slug: HGBb 
 --- 
 مطالعه دقیق شناخت‌هایی که به صورت خرد و کلان از قزوین صفوی ارائه گردیده، مسائل پنهانی را با خود همراه دارد که آگاهی بر آنها می‌تواند نتایج حاصله در شناخت را بهبود ‌بخشیده و دگرگون سازد. در اینجا سعی شده تا با اشاراتی کوتاه، به برخی نکاتِ مقوله مذکور پرداخته شود. این یک بررسی همه جانبه نیست، بلکه بر اساس نگاهی سریع بر کارهای انجام شده تنظیم گردیده است؛ از این‌رو می‌توان ادعا کرد که بیش از آنچه که نوشته شده، قابلیت افزایش دارد.
