--- a/_posts/2021-03-31-B6ME.md
+++ b/_posts/2021-03-31-B6ME.md
@@ -1,14 +1,4 @@
 --- 
-title: "معرفی مدرسۀ نوروز در جمهوری اوستیا-آلانیا/ روسیه" 
-authors: rezvanfar 
-types: blog 
-slug: B6ME 
-gallery: 
-- image_path: "undefined" 
-  title: "" 
- 
+published: false 
 --- 
-در نیمۀ دوم قرن ۱۹م به دلیل بحران‌های اقتصادی، بیش از پانصدهزار نفر از ایران، خصوصا مناطق آذری‌نشین، به مناطقی در قفقاز شمالی (مانند داغستان، چچن و اوستیا-آلانیا) و همچنین قفقاز جنوبی (مانند جمهوری آذربایجان، گرجستان و ارمنستان) مهاجرت نمودند.
-شهر ولادی‌قفقاز پایتخت جمهوری اوستیا-آلانیا، که مردمانش بر ریشه‌های آریاییِ خود می‌بالند، پذیرای نزدیک به ۲۰۰۰ نفر از مهاجرین ایرانی شد. ناصرالدین‌شاه در سفرنامۀ دوم و سوم خود به اروپا، هنگام عبور از ولادی‌قفقاز به کثرت ایرانیان، چه رعیت و چه بازرگان در این شهر اشاره می‌کند.
-مدرسهٔ روسی- ایرانیِ نوروز در سال ۱۹۰۲م بنا به درخواست و هزینۀ مهاجرین ایرانی و پیگیری داودخان نصرة الوزاره (دیپلمات تلاشگر و محبوب ایران) تاسیس گردید و مظفرالدین‌شاه بابت این خدمت فرهنگی، انگشتر خود را به داودخان هدیه داد.
-مدرسۀ نوروز با هدف تدریس معارف و علوم جدید و زبان ملی، تأسیس و پس از ۲۹سال در سال ۱۹۳۱م به دلیل بازگشت اکثر مهاجرین، تعطیل و کاربری آن تغییر کرد.
+  
