--- a/_posts/2021-03-09-Np9w.md
+++ b/_posts/2021-03-09-Np9w.md
@@ -1,14 +1,4 @@
 --- 
-title: "۸ مارس و «برآمدن زنان معمار»" 
-authors: madani 
-types: blog 
-slug: Np9w 
+published: false 
 --- 
-دوران کرونا اگر فقط یک خوبی داشته، این است که عوضِ اینکه رویدادهای علمی آن طرف دنیا را فقط در حد عناوین و اسامی و اگر خیلی سخاوتمند باشند، یک چکیدۀ ۱۰۰ کلمه‌ای، خبردار بشویم، از سر میز کارمان می‌توانیم شرکت‌کننده‌شان باشیم و سؤال‌هایمان را هم بپرسیم.
-انجمن مورخان معماری با همراهی انجمن مورخان معماری بریتانیا، در نکوداشت ۸ مارس، روز جهانی زنان، دیشب وبیناری برگزار کرد با عنوان تقریبی «برآمدن زنان در حرفۀ معماری: مقایسۀ چشم‌اندازها در ایالات متحده و بریتانیا». هر کدام از سخنرانی‌های ۱۰ دقیقه‌ای به معرفی یکی از زنان پیشگام در حرفۀ معماری در این کشورها اختصاص داشت، به اضافۀ یک سخنرانی دربارۀ زنان معمار در کشورهای غرب افریقا. مبادی زمانی فعالیت حرفه‌ای زنان معمار در امریکا و بریتانیا اواخر سدۀ نوزدهم و اوایل سدۀ بیستم بود. در جمع‌بندی وبینار هم به ویژگی‌های مشترک دیگری میان آنها اشاره شد: اینکه اکثر آنها به لحاظ اقتصادی‌ـ‌اجتماعی جزو طبقۀ متوسط حساب می‌شدند؛ یا اینکه در اکثر موارد کسی از نزدیکان این زنان، برادر یا پدر یا همسر، معمار بود.
-دو نفر از سخنرانان وبینار، دولورس هایدن و دوریس کول، نخستین کتاب‌هایشان دربارۀ زنان معمار را در دهۀ ۱۹۷۰ منتشر کرده بودند، عناوینی چون: «انقلاب خانگی بزرگ: تاریخ طراحی‌های زنانه برای خانه‌ها، محله‌ها و شهرهای امریکایی» یا «از تیپی (چادر سرخپوستان) تا آسمان‌خراش‌ها: یک تاریخِ زنان در معماری». از آن زمان تا امروز، البته آهسته و پیوسته، بدنۀ پژوهش‌ها دربارۀ زنان معمار در «غرب» در حال بسط و توسعه بوده است؛ اما جالب آنکه همچنان همگی سخنرانان موانعی بر سر راه شناخت دقیق و وسیع از زنان معمار می‌دیدند، از جمله آرشیو‌های ناقص و مدارک از دست‌رفته یا فراموش شده، و از آن عجیب‌تر: کم بودن پژوهشگران علاقه‌مند به این حوزه در میان نسل جوان.
-دوریس کول، نویسندۀ «از تیپی تا آسمان‌خراش»، که خود معمار نیز است، دربارۀ مشکل دوم توضیح جالبی داشت. ابتدا به حلقه‌ای از زنان دانشجوی معماری در دانشگاه هاروارد اشاره‌ای کرد و جلساتی که در سال‌های اخیر منظم با همدیگر دارند. بعد توضیح داد که زمانی که او فعالیت حرفه‌ای‌اش را آغاز کرد، چه در دانشگاه و چه در فضای حرفه‌ای، نسبتاً یکه و تنها بود. در عین حال موانعی بر سر راهش بود و کسی در اطرافش نبود تا دربارۀ آن موانع گفت‌وگو کنند. بنا بر این شاید به همین خاطر گذشتگان را در ذهنش احضار می‌کرد و در میان آرشیوها و کتاب‌ها و اسناد به دنبال پاره‌های باقی‌مانده از حرفه‌شان می‌گشت تا شاید در گفت‌وگویی خیالی با آنها موانع عینی آن زمان برای خودش را از سر راهش بردارد. به نظر او زنان امروز یکدیگر را دارند.
-اما همۀ این‌ها برای مخاطبِ ایرانی‌شان تداعی‌های متفاوتی داشت. امری پنهان نیست که بدنۀ دانش موجود از تاریخ معماری ایران چقدر نحیف است، میان تاریخ مدرن و پیشامدرن هم از این جهت فرق زیادی نیست. بنا بر این شاید عجیب نباشد که مثل بسیاری عرصه‌های دیگر دغدغۀ ما در حوزۀ تاریخ معماری نیز بسیار ابتدایی‌تر از همتایان غربی‌مان باشد. اگر آنجا آهسته و پیوسته دست‌کم ۵۰ سال است که پژوهش‌های فمینیستی در تاریخ هنر پیش می‌رود، اینجا در همان ۴-۵ تا تاریخ‌نامۀ معماری مدرن ایران که در دست داریم، به جز یک مورد استثنا، اثری از حتی نام زنان معمار دیده نمی‌شود (آقایان! دست‌کم ژستش را می‌گرفتید که اهمیت می‌دهید).
-لیندا ناکلین، مدرس تاریخ هنر، مقالۀ قدیمی، مهم و بسیار خواندنی‌ای دارد با عنوان «چرا هیچ زن هنرمند بزرگی نداشته‌ایم؟». در این مقاله، استدلال می‌کند که اصلا جست‌وجوی زنان هنرمند شاخص در تاریخ جست‌وجوی چندان ثمربخشی نیست؛ زیرا علاوه بر موانع جنسیتی، موانع طبقاتی و اقتصادی‌‌ـ‌اجتماعی نیز جلوی پدید آمدنِ یک همتای زن برای امثال میکل‌آنژ و داوینچی را می‌گرفت؛ به عبارتی، بخشی از استدلال او این است که همانطور که در میان اشراف و اعیانِ سده‌های دور هنرمند بزرگی نبود، در میان زنان هم چنین کسی نمی‌توانست پدید بیاید.
-شاید در صد سال اخیر در ایران برای اینکه مثلا حسین امانت یک همتای زن داشته باشد اصلا شرایط مناسبی وجود نداشت؛ بنا بر این شاید اصلا جست‌وجوی زنان معمار شاخص دست‌کم تا پیش از انقلاب ۵۷ جست‌وجوی ثمربخشی نباشد. اما معدود منابعِ جلوی دستمان و ۱-۲ تحقیق منتشرشده در این زمینه علاوه بر آن موانع از همان سوگیریِ (بایاس) همیشگی در نگریستن به دستاوردهای زنان نیز حکایت دارد، نه «گشتیم و نیافتیم».
-نمی‌دانم نکتار پاپازیان، رزماری‌گریفونه آزمون، نوشینِ احسان، فرانکا حسامیان، مویرا خلیلی، کیهاندخت رادپور، شهرزاد سراج و مینا سمیعی کجای جهان‌اند، حتی نمی‌دانم در قید حیات‌اند یا نه. ولی یک روز با تأخیر، از اینجای دنیا، ۸ مارسشان مبارک!
+  
